prod/objects/Opportunit_R_f_rentiel__c/Opportunit_R_f_rentiel__c.object-meta.xml
<CustomObject>
    <label>Opportunité Référentiel</label>
    <nameField>
        <displayFormat>OppRéf-{00}</displayFormat>
        <label>Opportunité Référentiel</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunités Référentiel</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>