prod/objects/Opportunit_R_f_rentiel__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunités Référentiel</relationshipLabel>
    <relationshipName>Opportunit_s_R_f_rentiel</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>