prod/objects/Opportunit_R_f_rentiel__c/fields/Ordre_d_affichage_des_champs__c.field-meta.xml
<CustomField>
    <fullName>Ordre_d_affichage_des_champs__c</fullName>
    <label>Ordre d&apos;affichage des champs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>