prod/objects/Opportunit_R_f_rentiel__c/fields/Pond_ration__c.field-meta.xml
<CustomField>
    <fullName>Pond_ration__c</fullName>
    <label>Pondération</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>