prod/objects/Opportunit_R_f_rentiel__c/fields/Referentiel__c.field-meta.xml
<CustomField>
    <fullName>Referentiel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Référentiel</label>
    <referenceTo>Referentiel__c</referenceTo>
    <relationshipLabel>Opportunités Référentiel</relationshipLabel>
    <relationshipName>Opportunit_s_R_f_rentiel</relationshipName>
    <type>Lookup</type>
</CustomField>